k8s/base/notifications/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
spec:
  selector:
    app: notifications
  ports:
    - port: 8006
      targetPort: 8006
